--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>My First Web Page</title>
-</head>
 <body>
-    <h1>My First Web Page</h1>
-    <p>This is my first web page.</p>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
