--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+  <head>
+    <title>Ehrenbot</title>
+    <style>
+        h1 {
+            color: red;
+        }
+    </style>
+  </head>
+  <body>
+    <h1>Ehrenbot registration</h1>
+    <h2>Copy the full link and paste it in the DM Channel</h2>
+  </body>
 </html>
